[package]
name = "swap-token"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "swap_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = { version = "0.24.2", features = ["default"] }
solana-program = "1.9.6"
spl-associated-token-account = "1.0.3"
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
